--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,8 @@
 body {
-  background: #f0f0f0;
+  background: gray;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 aside, main {
   padding: 10px!important;
 }
@@ -12,6 +14,7 @@ aside, main {
 aside .inner, main .inner {
   background: #fff;
   padding: 20px;
+
 }
 h1 {
   font-size: 24px;
@@ -72,7 +75,19 @@ a {
 }
 .skills-list li {
   font-size: 18px;
+  padding-top: 5px;
 }
+
+.projectLinks{
+  color: #729ee5;
+}
+
 .workDates {
+  color: #777;
+}
+.projectDates{
+  color: #777;
+}
+.educationDates{
   color: #777;
 }
